2000-09-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Schedules:  Duel, kid_games, wander, mine, farm.

2000-09-06  Jeff Freedman  <jeff@patches.simutech.com>

	* More schedules:  Waiter, thief, preach, eat_at_inn.

2000-09-04  Tristan Tarrant  <nadir@users.sourceforge.net>

	* files/utils.*: Added get_system_path() for remapping virtual paths
	to real ones. Modified U7open() to use new method. Implement U7remove()
	to enable similar functionality for removing files.
	* fnames.h: Remapped all names to use the new notation for virtual paths
	* game.cc: Clean up construction.
	* exult.cc: Setup virtual paths
	* configure.in: Better debug flags

2000-09-04  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Npc_actor): Set 1st-day schedule after you've talked
	to the NPC.  Removed old logic from gameclk.cc.

2000-09-03  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Npc_actor): Skip schedule actions if NPC is in a
	chunk that hasn't yet been read in fully.

2000-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Better sleeping.  Detects occupied beds too.
	* Fixed ship/sail bug.

2000-08-31  Tristan Tarrant  <nadir@users.sourceforge.net>

	* files/databuf.h: Added write() method to DataSources
	* tools/expack.cc: Implemented FLEX creation
	* tools/Makefile.am: Removed 'txt2cc' from build
	* data/*: Removed 'txt2cc' rubbish, and create 'exult.flx'. Updated
	credits & quotes
	* game.cc, bggame.cc, sigame.cc: Use credits, quotes & shapes from
	'exult.flx'
	* */*: Put some debugging messages between #if DEBUG/#endif

2000-08-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Cleaning up Ireg constructors, working on 'fields'.
	* First support for fields.  More body shapes added.
	
2000-08-30  Jeff Freedman  <jeff@patches.simutech.com>

	* Actually from Derek Liauw Kie Fa:  New 2X scaling code.

2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>

	* data/exult_credits.shp, 
	  data/exult_quotes.shp,
	  data/exult_logo.shp: Two shapes for the main menu and a logo